dd-1148 re,pved period from section pages, fixed spacing for news. Fixed sizing of helpline on iPad. Refactored some styles into separate files .

--- a/src/AppBundle/Resources/assets/scss/components/_alert.scss
+++ b/src/AppBundle/Resources/assets/scss/components/_alert.scss
@@ -34,9 +34,13 @@
         box-sizing: border-box;
         background: $newsbg url("images/icons/info.png") 10px 10px no-repeat;
         border-left: 3px solid $newsborder;
-        margin-bottom: 0;
+        margin-bottom: 30px;
         width: 100%;
         padding-left: 50px;
+    
+        @include media(mobile) {
+            margin-bottom: 20px;
+        }
     }
     
 }
