--- a/src/AppBundle/Resources/assets/scss/components/_report-overview.scss
+++ b/src/AppBundle/Resources/assets/scss/components/_report-overview.scss
@@ -1,209 +1,3 @@
-.overview-sections {
-
-    padding-top: 10px;
-    border-top: 1px solid $grey-3;
-    color: $text-colour;
-
-    @include media(mobile) {
-        padding-top: 20px;
-    }
-    
-    .overview-section {
-        
-        padding-top: 18px;
-
-        @include media(mobile) {
-            padding-top: 0;
-        }
-        
-
-        > .heading {
-            @include core-19();
-            color: $text-colour;
-            background: $grey-3;
-            padding: 7px 10px 5px 10px;
-            
-            @include media(mobile) {
-               font-size: 16px;
-            }
-            
-        }
-                
-        .sub-section {
-            @extend %contain-floats;
-            border-top: 1px solid $grey-3;
-            clear: both;
-            
-            &:first-of-type {
-                border-top: 0;
-            }
-            
-            .heading {
-                @include box-sizing(border-box);
-                @include bold-24();
-                @include inline-block();
-                margin: 20px 10px 15px 5px;
-                width: 35%;
-                float: left;
-                color: $grey-status;
-                
-                @include media(mobile) {
-                    font-size: 16px;
-                    width: auto;
-                    margin: 10px 10px 10px 5px;
-                }
-                
-                a {
-                    color: $black;
-                    text-decoration: none;
-
-                    @include media(mobile) {
-                        color: $link-colour;
-                        text-decoration: underline;
-                    }
-                }
-            }
-    
-            .edit-link {
-                @include box-sizing(border-box);
-                @include core-19(1.6);
-                @include inline-block();
-                margin: 20px 0 15px 0;
-                float: right;
-                width: auto;
-                text-align: right;
-                text-decoration: underline;
-
-                @include media(mobile) {
-                    display: none;
-                }
-
-                &.disabled {
-                    color: $grey-status;
-                }
-            }
-
-            .status {
-                
-                @include box-sizing(border-box);
-                @include inline-block();
-                
-                font-size: 13px;
-                font-weight: 700;
-                line-height: 1.42857;
-                text-transform: uppercase;
-                padding: 2px 5px 0 5px;
-                margin: 20px 0 15px 0;
-                float: left;
-                text-align: center;
-                border-radius: 5px;
-                border: 2px solid $grey-status;
-
-                @include media(mobile) {
-                    font-size: 11px;
-                    float: right;
-                    margin: 10px 0 10px 0;
-                }
-                
-                &.not-started {
-                    color: $grey-status;
-                }
-                
-                &.done {
-                    color: $green-status;
-                    border-color: $green-status;
-                }
-                
-                &.incomplete {
-                    color: $orange-status;
-                    border-color: $orange-status;
-                }
-                
-            }
-            
-            .help-link {
-                display: none;
-            }
-            
-            .guidance {
-                border-top: 1px solid $grey-3;
-                padding: 20px 0 0 20px;
-                clear: both;
-                display: none;
-                
-                p {
-                    width: 80%;
-                }
-                
-                .page-section-list {
-                    margin-left: 10px;
-                    width: 75%;
-                }
-            }
-
-            &.accordian {
-
-                .help-link {
-                    @include box-sizing(border-box);
-                    @include core-19(1.6);
-                    @include inline-block();
-                    padding: 20px 10px 15px 20px;
-                    width: 20%;
-                    float: left;
-                    color: $link-colour;
-
-                    @include media(mobile) {
-                        display: none;
-                    }
-                    
-                    @include media(tablet) {
-                        display: none;
-                    }
-
-                    @include media(desktop) {
-                        display: inline;
-                    }
-                }
-
-                .summary {
-                    background: url("images/icons/accordian-closed.png") 0 27px no-repeat;
-                }
-
-                &.open {
-                    .open-text {
-                        display: inline;
-                        text-decoration: underline;
-                    }
-                    
-                    .closed-text {
-                        display: none;
-                    }
-                    
-                    .summary {
-                        background-image: url("images/icons/accordian-open.png");
-                    }
-                
-                }
-
-                &.closed {
-                    
-                    .open-text {
-                        display: none;
-                    }
-                    
-                    .closed-text {
-                        display: inline;
-                        text-decoration: underline;
-                    }
-                
-                }
-
-            }
-            
-        }
-    }
-}
-
 .report-overview {
     
     .page-section-warning {
@@ -243,72 +37,6 @@
             @include grid-column(1 / 4, $full-width: tablet);
         }
         
-    }
-
-
-}
-
-
-.labelvalue {
-    .label {
-        @include core-19();
-    }
-
-    .value {
-        @include bold-19();
-    }
-}
-
-#report-status {
-    
-    h2 {
-        @include bold-24();
-        padding-bottom: 25px;
-
-        @include media(mobile) {
-            border-top: 4px solid $grey-3;
-            padding-top: 25px;
-            
-            #report-status.readytosubmit & {
-                border-top: 4px solid $green-status;
-            }
-        }
-        
-    }
-    
-    .labelvalue {
-        margin-bottom: 20px;
-    }
-    
-    .labelsvalues {
-        padding: 20px 0 0  0;
-        border-top: 4px solid $grey-3;
-        border-bottom: 1px solid $grey-3;
-    }
-    
-    &.readytosubmit .labelsvalues {
-        border-top: 4px solid $green-status;  
-    }
-
-    &.incomplete .labelsvalues {
-        border-top: 4px solid $grey-3;
-    }
-
-    &.inprogress .labelsvalues {
-        border-top: 4px solid $grey-3;
-    }
-    
-}
-
-
-p#helpline {
-    @include bold-19();
-    padding-left: 50px;
-    margin: 4px 0 45px 0;
-    background: url("images/icons/phone.png") top left no-repeat;
-
-    @include media(mobile) {
-        display: none;
     }
     
 }
